--- a/authenticationservice/authenticationservice.yml
+++ b/authenticationservice/authenticationservice.yml
@@ -8,3 +8,4 @@ spring.datasource.testWhileIdle: "true"
 spring.datasource.validationQuery: "SELECT 1"
 spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.MySQL5Dialect"
 signing.key: "345345fsdfsf5345"
+encrypt.key=mykey
